# airflow-provider-dolphindb

./: .gitignore  LICENSE  README.md  setup.cfg
airflow_provider_dolphindb/: __init__.py  get_provider_info.py  provider.yaml
airflow_provider_dolphindb/hooks/: dolphindb.py
airflow_provider_dolphindb/operators/: dolphindb.py
example_dags/: example_dolphindb.py  insert_data.dos
tests/hooks/: test_dolphindb.py
tests/operators/: test_dolphindb.py
