[metadata]
name = airflow-provider-dolphindb
version = attr: airflow_provider_dolphindb.__version__
url = https://www.dolphindb.com
author = DolphinDB, Inc.
author_email = support@dolphindb.com
description = Apache Airflow DolphinDB provider containing Operators.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE.txt
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Framework :: Apache Airflow
	Framework :: Apache Airflow :: Provider
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Monitoring
project_urls =
    Source Code=https://github.com/dolphindb/airflow-provider-dolphindb
    Homepage=https://github.com/dolphindb/airflow-provider-dolphindb

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
install_requires =
    apache-airflow>=2.2.0
    pydolphindb
zip_safe = false

[options.extras_require]
dev =
    pytest

[options.packages.find]
include =
    airflow_provider_dolphindb*

[tool:pytest]
testpaths = tests
addopts = --tb=short

[options.entry_points]
apache_airflow_provider=
    provider_info = airflow_provider_dolphindb.__init__:get_provider_info
